Refactored the notification result table to work with PushNotificationResponse objects directly (and resource-ized table-related strings).

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -1,7 +1,21 @@
-pushy-console.title=Pushy Console
+alert.notification-failed.title=Failed to send push notification
+alert.notification-failed.header=An exception was thrown while sending a push notification.
+
+certificate-password-dialog.title=Enter password
+certificate-password-dialog.header=Please enter the password for {0}.
+certificate-password-dialog.prompt=Password
 
 delivery-priority.immediate=Immediate
 delivery-priority.conserve-power=Conserve power
+
+notification-result.details.accepted=n/a
+notification-result.details.expiration={0} ({1,date,yyyy-MM-dd} {1,time,HH:mm:ss})
+notification-result.status.accepted=Accepted
+notification-result.status.rejected=Rejected
+
+password-dialog.incorrect-password=The password you entered is incorrect. Please try again.
+
+pushy-console.title=Pushy Console
 
 apns-server.label=APNs server
 port.label=Port
@@ -21,11 +35,3 @@ status.label=Status
 details.label=Details
 apns-id.label=APNs ID
 
-password-dialog.incorrect-password=The password you entered is incorrect. Please try again.
-
-certificate-password-dialog.title=Enter password
-certificate-password-dialog.header=Please enter the password for {0}.
-certificate-password-dialog.prompt=Password
-
-alert.notification-failed.title=Failed to send push notification
-alert.notification-failed.header=An exception was thrown while sending a push notification.
