Namespaced FXML string identifiers.

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -17,21 +17,21 @@ password-dialog.incorrect-password=The password you entered is incorrect. Please
 
 pushy-console.title=Pushy Console
 
-apns-server.label=APNs server
-port.label=Port
-credentials.label=Credentials
-browse.label=Browse…
-key-id.label=Key ID
-team-id.label=Team ID
-topic.label=Topic
-token.label=Device token
-collapse-id.label=Collapse ID
-priority.label=Priority
-payload.label=Payload
-send.label=Send notification
-notification.label=Notification
-response.label=Response
-status.label=Status
-details.label=Details
-apns-id.label=APNs ID
+fxml.apns-server.label=APNs server
+fxml.port.label=Port
+fxml.credentials.label=Credentials
+fxml.browse.label=Browse…
+fxml.key-id.label=Key ID
+fxml.team-id.label=Team ID
+fxml.topic.label=Topic
+fxml.token.label=Device token
+fxml.collapse-id.label=Collapse ID
+fxml.priority.label=Priority
+fxml.payload.label=Payload
+fxml.send.label=Send notification
+fxml.notification.label=Notification
+fxml.response.label=Response
+fxml.status.label=Status
+fxml.details.label=Details
+fxml.apns-id.label=APNs ID
 
