Resolved an error-handling TODO.

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -1,3 +1,7 @@
+alert.bad-certificate.title=Invalid certificate
+alert.bad-certificate.header=The certificate you chose doesn't appear to be a valid APNs certificate.
+alert.bad-certificate.content-text=The chosen certificate doesn't identify an APNs topic as a UID in its subject.
+
 alert.notification-failed.title=Failed to send push notification
 alert.notification-failed.header=An exception was thrown while sending a push notification.
 
