Extracted file picker filter labels into resource files.

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -5,6 +5,11 @@ alert.bad-certificate.content-text=The chosen certificate doesn't identify an AP
 alert.notification-failed.title=Failed to send push notification
 alert.notification-failed.header=An exception was thrown while sending a push notification.
 
+certificate-chooser.filter.pkcs8_and_pkcs12=PKCS#8 and PKCS#12 files
+certificate-chooser.filter.pkcs12=PKCS#12 files (certificates)
+certificate-chooser.filter.pkcs8=PKCS#8 files (signing keys)
+certificate-chooser.filter.all=All files
+
 certificate-password-dialog.title=Enter password
 certificate-password-dialog.header=Please enter the password for {0}.
 certificate-password-dialog.prompt=Password
