Remember recent payloads.

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -36,6 +36,7 @@ fxml.topic.label=Topic
 fxml.token.label=Device token
 fxml.collapse-id.label=Collapse ID
 fxml.priority.label=Priority
+fxml.recent-payloads.label=Recent payloads
 fxml.payload.label=Payload
 fxml.send.label=Send notification
 fxml.notification.label=Notification
