Used a more application-specific placeholder for the sent notification table.

--- a/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/turo/pushy/console/pushy-console_en.properties
@@ -17,6 +17,7 @@ certificate-password-dialog.prompt=Password
 delivery-priority.immediate=Immediate
 delivery-priority.conserve-power=Conserve power
 
+notification-result.placeholder=No notifications sent
 notification-result.details.accepted=n/a
 notification-result.details.expiration={0} ({1,date,yyyy-MM-dd} {1,time,HH:mm:ss})
 notification-result.status.accepted=Accepted
