Resolve a localization TODO.

--- a/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
@@ -45,6 +45,8 @@ notification-result.details.expiration={0} ({1,date,yyyy-MM-dd} {1,time,HH:mm:ss
 notification-result.status.accepted=Accepted
 notification-result.status.rejected=Rejected
 
+password-dialog.title=Password
+password-dialog.header=Password
 password-dialog.incorrect-password=The password you entered is incorrect. Please try again.
 
 pushy-console.title=Pushy Console
