--- a/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
@@ -39,6 +39,13 @@ certificate-password-dialog.prompt=Password
 delivery-priority.immediate=Immediate
 delivery-priority.conserve-power=Conserve power
 
+notification-type.alert=Alert
+notification-type.background=Background
+notification-type.voip=VoIP
+notification-type.complication=Complication
+notification-type.fileprovider=File Provider
+notification-type.mdm=Mobile Device Management (MDM)
+
 notification-result.placeholder=No notifications sent
 notification-result.details.accepted=n/a
 notification-result.details.expiration={0} ({1,date,yyyy-MM-dd} {1,time,HH:mm:ss})
@@ -62,6 +69,7 @@ fxml.topic.label=Topic
 fxml.token.label=Device token
 fxml.collapse-id.label=Collapse ID
 fxml.priority.label=Priority
+fxml.type.label=Notification type
 fxml.recent-payloads.label=Recent payloads
 fxml.payload.label=Payload
 fxml.send.label=Send notification
