Update to Pushy 0.15.1

--- a/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
@@ -44,6 +44,7 @@ notification-result.details.accepted=n/a
 notification-result.details.expiration={0} ({1,date,yyyy-MM-dd} {1,time,HH:mm:ss})
 notification-result.status.accepted=Accepted
 notification-result.status.rejected=Rejected
+notification-result.status.rejected.reason-unknown=Unknown
 
 password-dialog.title=Password
 password-dialog.header=Password
