support live activities

--- a/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
+++ b/src/main/resources/com/eatthepath/pushy/console/pushy-console_en.properties
@@ -45,6 +45,7 @@ notification-type.voip=VoIP
 notification-type.complication=Complication
 notification-type.fileprovider=File Provider
 notification-type.mdm=Mobile Device Management (MDM)
+notification-type.live_activity = Live Activity
 
 notification-result.placeholder=No notifications sent
 notification-result.details.accepted=n/a
